--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -3,11 +3,12 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
+      <tr> <td>08:30</td>  <td>Pre-workshop breakfast</td> </tr>
       <tr> <td>09:00</td>  <td>Welcome, code of conduct, and introductions</td> </tr>
       <tr> <td>09:15</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>10:45</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
+      <tr> <td>12:00</td>  <td>Lunch</td> </tr>
       <tr> <td>13:00</td>  <td>Version Control with Git</td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
       <tr> <td>14:45</td>  <td>Version Control with Git (Continued)</td> </tr>
@@ -18,10 +19,11 @@
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
+      <tr> <td>08:30</td>  <td>Pre-workshop breakfast</td> </tr>
       <tr> <td>09:00</td>  <td>R for Reproducible Scientific Analysis (Part 1)</td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>10:45</td>  <td>R for Reproducible Scientific Analysis (Part 2)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
+      <tr> <td>12:00</td>  <td>Lunch</td> </tr>
       <tr> <td>13:00</td>  <td>R for Reproducible Scientific Analysis (Part 3)</td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
       <tr> <td>14:45</td>  <td>R for Reproducible Scientific Analysis (Part 4)</td> </tr>
