--- a/_includes/workshop_ad.html
+++ b/_includes/workshop_ad.html
@@ -27,6 +27,7 @@
           {% endif %}
           <p>{{page.humandate}}</p>
           <p>{% if page.humantime %}{{page.humantime}}{% endif %}</p>
+          <p>A light breakfast andlunch will be provided for registered participants.</p>
         </div>
         <div class="col-md-6">
           <p>
