--- a/_includes/swc/intro.html
+++ b/_includes/swc/intro.html
@@ -17,5 +17,5 @@
   </em>
 </p>
 <p align="center">
-  A light breakfast and lunch will be provided for registered participants.
+  <b>A light breakfast and lunch will be provided for registered participants.</b>
 </p>
