--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -19,7 +19,7 @@
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td> </td>  <td> </td> </tr>
+      <tr> <td>&nbsp;</td>  <td>&nbsp;</td> </tr>
       <tr> <td>08:30</td>  <td>Pre-workshop breakfast</td> </tr>
       <tr> <td>09:00</td>  <td>R for Reproducible Scientific Analysis (Part 1)</td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
